[package]
name = "poolbeg"
version = "0.2.3"
edition = "2024"
description = "High-performance Web3 JSON-RPC caching proxy with Redis backend"
license = "MIT"

[dependencies]
# async runtime
tokio = { version = "1", features = ["full"] }

# http server
axum = { version = "0.8", features = ["ws"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip", "limit"] }

# http client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# redis
fred = { version = "10", features = ["subscriber-client"] }

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# config
figment = { version = "0.10", features = ["yaml", "env"] }
clap = { version = "4", features = ["derive"] }

# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

# hashing
blake3 = "1"

# ethereum types
alloy-primitives = "1"
alloy-rpc-types-eth = "1"

# utilities
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
futures-util = "0.3"
once_cell = "1"
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }

[dev-dependencies]
tempfile = "3"
